Group17RobotReal/Group17Robot.cydsn/REBUILD.log
--------------- Rebuild Started: 10/17/2019 19:24:50 Project: Group17Robot, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
cydsfit.exe -.appdatapath "C:\Users\Misha\AppData\Local\Cypress Semiconductor\PSoC Creator\4.2" -.fdsnotice -.fdswarpdepfile=warp_dependencies.txt -.fdselabdepfile=elab_dependencies.txt -.fdsbldfile=generated_files.txt -.fdsreffile=referenced_files.txt -p "C:\Users\Misha\Documents\PSoC Creator\ECE3091_Group17\Group17RobotReal\Group17Robot.cydsn\Group17Robot.cyprj" -d CY8C5888LTI-LP097 -s "C:\Users\Misha\Documents\PSoC Creator\ECE3091_Group17\Group17RobotReal\Group17Robot.cydsn\Generated_Source\PSoC5" -- -yv2 -q10 -ygs -o2 -v3 -.fftcfgtype=LE
Elaborating Design...
ADD: fit.M0029: information: Voltage Reference Information: Vref '1.024V' is connected to terminal 'vminus' of '\ADC:DSM\' but no direct hardware connection exists.
 * C:\Program Files (x86)\Cypress\PSoC Creator\4.2\PSoC Creator\psoc\content\CyComponentLibrary\CyComponentLibrary.cylib\ADC_DelSig_v3_30\PSoC5\ADC_DelSig_v3_30.cysch (Instance:DSM)
 * C:\Users\Misha\Documents\PSoC Creator\ECE3091_Group17\Group17RobotReal\Group17Robot.cydsn\TopDesign\TopDesign.cysch (Instance:vRef_2)
HDL Generation...
Synthesis...
Tech Mapping...
Analog Placement...
Log: apr.M0058: The analog placement iterative improvement is 53% done. (App=cydsfit)
Log: apr.M0058: The analog placement iterative improvement is 78% done. (App=cydsfit)
Analog Routing...
Analog Code Generation...
Info: apr.M0060: Comparator 'Comparator[2]@[FFB(Comparator,2)]' is powered up by analog subsystem to support an auto-enabled vref. (App=cydsfit)
Digital Placement...
Digital Routing...
Bitstream Generation...
Bitstream Verification...
Static timing analysis...
API Generation...
Dependency Generation...
Cleanup...
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/main.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c main.c -o .\CortexM3\ARM_GCC_541\Debug\main.o
In file included from main.c:23:0:
main.h:34:1: error: expected identifier or '(' before '<<' token
 <<<<<<< HEAD
 ^
In file included from main.c:23:0:
main.h:45:9: error: invalid suffix "f63c8a9e8b878c8e2eedec6e73ca6054b7b41d" on integer constant
 >>>>>>> 43f63c8a9e8b878c8e2eedec6e73ca6054b7b41d
         ^
main.h:118:1: error: expected identifier or '(' before '<<' token
 <<<<<<< HEAD
 ^
main.h:124:9: error: invalid suffix "f63c8a9e8b878c8e2eedec6e73ca6054b7b41d" on integer constant
 >>>>>>> 43f63c8a9e8b878c8e2eedec6e73ca6054b7b41d
         ^
main.c: In function 'main':
main.c:198:5: error: 'internal_orientation' undeclared (first use in this function)
     internal_orientation = EAST;                // robot initial starts in the East direction
     ^
main.c:198:5: note: each undeclared identifier is reported only once for each function it appears in
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Rebuild Failed: 10/17/2019 19:25:30 ---------------
